fix: move the reporting link up so it is visible

--- a/projects/mtd/src/app/shared/word-modal/word-modal.component.scss
+++ b/projects/mtd/src/app/shared/word-modal/word-modal.component.scss
@@ -4,6 +4,9 @@
   }
 }
 
+.report-row {
+  text-align: right;
+}
 .report {
   font-size: x-small;
   text-decoration: underline;
